commit, change requirements and add bearer token. (#4)
